# kovi-plugin-irc-gateway

./: Cargo.toml  capsmap.txt  readme.txt
examples/: irc-gateway.rs
src/: config.rs  error.rs  irc_handler.rs  irc_proto.rs  lib.rs  onebot.rs  server.rs
test_out/: 20260418_build_away_replies_set.out  20260418_build_away_replies_unset.out  20260418_build_cap_ls_reply.out  20260418_build_join_reply.out  20260418_build_lusers_reply.out  20260418_build_motd_burst.out  20260418_build_no_such_channel.out  20260418_build_part_broadcast.out  20260418_build_pong.out  20260418_build_time_reply.out  20260418_build_userhost_reply.out  20260418_build_version_reply.out  20260418_build_welcome_burst.out  20260418_build_whois_reply.out  20260418_extract_digits.out  20260418_format_utc_timestamp_known_date.out  20260418_format_utc_timestamp_leap_year.out  20260418_format_utc_timestamp_midnight.out  20260418_handle_part_multiple.out  20260418_handle_part_single.out  20260418_irssi_registration_flow.out  20260418_parse_join_channels_invalid.out  20260418_parse_join_channels_multiple.out  20260418_parse_join_channels_no_hash.out  20260418_parse_join_channels_single.out  20260418_plan_cap_end_complete.out  20260418_plan_join.out  20260418_plan_join_effects_all_invalid.out  20260418_plan_join_effects_all_valid.out  20260418_plan_join_effects_mixed.out  20260418_plan_motd.out  20260418_plan_nick_after_user.out  20260418_plan_nick_before_user.out  20260418_plan_nick_blocked_by_cap.out  20260418_plan_nick_change_registered.out  20260418_plan_ping.out  20260418_plan_privmsg.out  (+14 more)
(+2 files in other folders)
